fix position of anchor elements, they are not working on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -59,23 +59,27 @@ ul {
   padding: 50px 30px;
 }
 
-a {
-  text-decoration: none;
-  font-size: 20px;
-  color: #f5f5f5;
-}
-
 /* holographic-card effects by Nefe Emadamerho-Atori https://prismic.io/blog/css-hover-effects */
 
 .holographic-card {
   width: 300px;
   height: 200px;
   background: #111;
-  align-content: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   overflow: hidden;
   border-radius: 15px;
   transition: all 0.5s ease;
+}
+
+.holographic-card a {
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 20px;
+  position: relative;
+  z-index: 2;
 }
 
 .holographic-card::before {
